# wires

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/domain/auth/entities/: cryptography_settings.py  user.py
examples/domain/auth/errors/: authentication_errors.py
examples/domain/auth/ports/: password_encryptor.py
examples/domain/auth/ports/persistence/: cryptography_repository.py  user_repository.py
examples/domain/auth/tests/: context.py
examples/domain/auth/tests/authenticate_user_usecase/: conftest.py  test_authenticate_edge_cases.py  test_authenticate_integration.py  test_authenticate_password_encryption_error.py  test_authenticate_password_verification_error.py  test_authenticate_settings_not_found.py  test_authenticate_success.py  test_authenticate_user_not_found.py
examples/domain/auth/usecases/: authenticate_user.py
examples/domain/shared/: errors.py
examples/domain/shared/ports/: logger.py
examples/services/: authenticate_service.py
examples/services/tests/: test_authenticate_service.py
wires/: __init__.py  __version__.py  composite.py  context.py  context_registry.py  inject.py  parameters.py  strategy.py
wires/__tests__/: conftest.py  test_composite.py  test_inject.py  test_resolve_port.py
wires/__tests__/context_strategy/: test_injected.py  test_resolve.py
wires/tests/composite/: test_composite.py
wires/tests/context/: conftest.py  test_composite_key.py  test_resolve.py  test_resolve_dependencies.py
wires/tests/inject/: test_inject.py
