[project]
name = "wires"
version = "0.1.0"
description = "A simple dependency injection implementation for Python"
authors = [
    {name = "Ricardo Kiyoshi Sasaki", email = "ricardo.k.sasaki@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["dependency-injection", "di", "ioc", "composition"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Object Brokering",
]
dependencies = ["mypy (>=1.18.1,<2.0.0)"]

[project.urls]
Homepage = "https://github.com/ricardosasaki/wires"
Repository = "https://github.com/ricardosasaki/wires"
Documentation = "https://github.com/ricardosasaki/wires#readme"
"Bug Tracker" = "https://github.com/ricardosasaki/wires/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["wires*"]

[tool.setuptools.package-data]
wires = ["py.typed"]


[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["wires/__tests__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
